--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
 <!DOCTYPE html>
-<html lang="ru"><head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="author" content="Alex Smith, https://me.qwedl.com/" />
-	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
-	<script src="client.js" onload="init()"></script>
-	<title>Shaka Player</title>
-</head><body style="margin: 0; background-color: #202124; color: #fff; height: 100vh;"></body></html>
+<html lang="ru"><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><meta name="author" content="Alex Smith, https://me.qwedl.com/" /><link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" /><title>Shaka Player</title></head><body style="margin: 0; background-color: #202124; color: #fff; height: 100vh;"></body><script src="client.js" onload="init()"></script></html>
